# loredb

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  debug_test.cpp  loredb.db  setup.sh  test_clean_build.sh  vcpkg.json
.cursor/rules/: cpp-style.mdc  project-overview.mdc
.github/workflows/: benchmark.yml
benchmarks/: query_benchmark.cpp  storage_benchmark.cpp
dev/bench/: data.js
src/cli/: main.cpp  repl.cpp  repl.h
src/query/: execution_plan.cpp  execution_plan.h  executor.cpp  executor.h  planner.cpp  planner.h  query_types.h
src/query/cypher/: ast.cpp  ast.h  executor.cpp  executor.h  expression_evaluator.cpp  expression_evaluator.h  grammar.h  parser.cpp  parser.h
src/storage/: file_page_store.cpp  file_page_store.h  graph_store.cpp  graph_store.h  index_manager.cpp  index_manager.h  page_store.cpp  page_store.h  record.cpp  record.h  simple_index_manager.cpp  simple_index_manager.h  wal_manager.cpp  wal_manager.h
src/transaction/: lock_manager.cpp  lock_manager.h  mvcc.cpp  mvcc.h  mvcc_manager.cpp  mvcc_manager.h
src/util/: crc32.cpp  crc32.h  expected.h  logger.cpp  logger.h  varint.cpp  varint.h
tests/query/: test_cypher_parser.cpp  test_executor.cpp
tests/storage/: test_file_page_store.cpp  test_index_manager.cpp  test_page_store.cpp  test_wal_manager.cpp
tests/transaction/: test_mvcc.cpp  test_mvcc_graph.cpp
tests/util/: test_varint.cpp
